--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,36 +1,19 @@
-pipeline {
-  agent any
-  options {
-    buildDiscarder(logRotator(numToKeepStr: '5'))
-  }
-  environment {
-    DOCKERHUB_CREDENTIALS = credentials('amsantana-dockerhub')
-  }
-  stages {
-    stage('Build Application') {
-      steps {
-        sh 'docker build -t amsantana/ubuntu:latest .'
-      }
-    }
-    stage('Deploy Application') {
-      steps {
-        sh 'docker run -d -p 80:80 amsantana/ubuntu:latest'
-      }
-    }
-    stage('Connect DockerHub') {
-      steps {
-        sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
-      }
-    }
-    stage('Push DockerHub') {
-      steps {
-        sh 'docker push amsantana/ubuntu:latest'
-      }
-    }
-  }
-  post {
-    always {
-      sh 'docker logout'
-    }
-  }
-  }
+version: 0.2
+
+phases:
+  pre_build:
+    commands:
+      - chmod +x login-docker.sh build-image.sh push-image.sh
+      - echo Logging in to DockerHub...
+      - ./login-docker.sh
+  Build Application:
+    commands:
+      - echo Build started on `date`
+      - echo Building the Docker image...          
+      - ./build-docker.sh
+          
+  Deploy Application:
+    commands:
+      - echo Build completed on `date`
+      - echo Pushing the Docker image...
+      - ./push-docker.sh
