--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,13 +6,13 @@ phases:
       - chmod +x login-docker.sh build-image.sh push-image.sh
       - echo Logging in to DockerHub...
       - ./login-docker.sh
-  Build Application:
+  build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...          
       - ./build-docker.sh
           
-  Deploy Application:
+  post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
