--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,17 +3,16 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - chmod +x login-docker.sh build-image.sh push-image.sh
-      - echo Logging in to DockerHub...
-      - ./login-docker.sh
+      - echo Logging in to Amazon ECR...
+      - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 196213906354.dkr.ecr.us-west-2.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...          
-      - ./build-image.sh
-          
+      - docker build -t amsantana-dockerhub .
+      - docker tag amsantana-dockerhub:latest 196213906354.dkr.ecr.us-west-2.amazonaws.com/amsantana-dockerhub:latest      
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - ./push-image.sh
+      - docker push 196213906354.dkr.ecr.us-west-2.amazonaws.com/amsantana-dockerhub:latest
