--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
+      - set -eu
       - $(aws ecr get-login --no-include-email --region us-west-2)
   build:
     commands:
