--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - set -eu
-      - $(aws ecr get-login --no-include-email --region us-west-2)
+      - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 196213906354.dkr.ecr.us-west-2.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
