--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - set -x
-      - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 196213906354.dkr.ecr.us-west-2.amazonaws.com
+      - $(aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 196213906354.dkr.ecr.us-west-2.amazonaws.com)
   build:
     commands:
       - echo Build started on `date`
