--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...          
       - docker build -t amsantana-dockerhub .
-      - docker tag amsantana-dockerhub:latest 196213906354.dkr.ecr.us-west-2.amazonaws.com/amsantana-dockerhub:latest      
+      - docker tag amsantana-dockerhub:hello-world 196213906354.dkr.ecr.us-west-2.amazonaws.com/amsantana-dockerhub:latest      
   post_build:
     commands:
       - echo Build completed on `date`
