--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,4 +15,4 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push my-container-app:latest 483639178502.dkr.ecr.us-east-1.amazonaws.com/my-ecr-repo
+      - docker push my-container-app:latest
